[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}

[metadata]
name = TOSICA
version = file: VERSION.txt
description = Single-cell Transformer
long_description = file: README.md
author = Jiawei Chen, Hao Xu, Jing-Dong J. Han
author_email = jiaweichen@pku.edu.cn, 2101111844@stu.pku.edu.cn, jackie.han@pku.edu.cn
license = MIT
keywords = 
	transformer
	single cell
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[bdist_wheel]
build_number = 1

[options]
packages = 
	TOSICA
python_requires = >=3.8
install_requires = 
	numpy==1.19.2
	pandas
	seaborn
	matplotlib
	numba
	scanpy>=1.8.2
	anndata>=0.7.2
	h5py==3.4.0
	scipy
	scikit-learn
	scikit-misc
	louvain
	umap-learn
	torch==1.7.1
	tensorboard==2.6.0
	protobuf==3.17.2
	einops
	tqdm>=4.62.1
	pydot
	llvmlite
zip_safe = False

[options.package_data]
TOSICA = 
	resources/*.gmt
